--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -386,66 +386,52 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nsG-b3-cq8">
-                                                    <rect key="frame" x="8" y="207" width="84" height="20"/>
+                                                    <rect key="frame" x="8" y="185" width="158" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="84" id="ihR-JW-DjE"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Y4Y-fC-cIH"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YPA-SH-92m">
-                                                    <rect key="frame" x="8" y="131" width="158" height="40"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YPA-SH-92m">
+                                                    <rect key="frame" x="8" y="127" width="158" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="ppL-T7-Dfv"/>
+                                                        <constraint firstAttribute="height" constant="30" id="HW1-cD-CgO"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nze-g0-pbD">
-                                                    <rect key="frame" x="8" y="179" width="158" height="20"/>
+                                                    <rect key="frame" x="8" y="161" width="158" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="1ND-Hl-hkz"/>
+                                                        <constraint firstAttribute="width" constant="158" id="M0T-RS-zHD"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOG-VB-Ysy">
-                                                    <rect key="frame" x="115.33333333333333" y="207" width="50.666666666666671" height="23"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="nh5-Yu-Iux"/>
-                                                    </constraints>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system">
-                                                        <color key="baseForegroundColor" systemColor="systemRedColor"/>
-                                                    </buttonConfiguration>
-                                                </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wFo-Bf-cdZ">
                                                     <rect key="frame" x="8" y="8" width="158" height="115"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="115" id="3KW-PC-6C2"/>
+                                                        <constraint firstAttribute="height" constant="115" id="dja-hc-zEJ"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="nze-g0-pbD" firstAttribute="top" secondItem="YPA-SH-92m" secondAttribute="bottom" constant="8" id="0nV-zY-ZnV"/>
-                                                <constraint firstItem="wFo-Bf-cdZ" firstAttribute="top" secondItem="12n-hC-XS3" secondAttribute="top" constant="8" id="Ibf-Ng-5GW"/>
-                                                <constraint firstAttribute="bottom" secondItem="bOG-VB-Ysy" secondAttribute="bottom" constant="8" id="MHT-M0-sf4"/>
-                                                <constraint firstItem="YPA-SH-92m" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="Mqp-hl-Ctb"/>
-                                                <constraint firstItem="nsG-b3-cq8" firstAttribute="top" secondItem="nze-g0-pbD" secondAttribute="bottom" constant="8" id="P1n-qL-dk9"/>
-                                                <constraint firstItem="bOG-VB-Ysy" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nsG-b3-cq8" secondAttribute="trailing" constant="8" symbolic="YES" id="P2i-bW-bMu"/>
-                                                <constraint firstAttribute="trailing" secondItem="YPA-SH-92m" secondAttribute="trailing" constant="8" id="YIa-SC-VNF"/>
-                                                <constraint firstItem="nze-g0-pbD" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="Yo4-yi-MTn"/>
-                                                <constraint firstAttribute="trailing" secondItem="nze-g0-pbD" secondAttribute="trailing" constant="8" id="aYg-DT-5s9"/>
-                                                <constraint firstAttribute="trailing" secondItem="wFo-Bf-cdZ" secondAttribute="trailing" constant="8" id="bA7-LM-IT1"/>
-                                                <constraint firstItem="bOG-VB-Ysy" firstAttribute="top" secondItem="nze-g0-pbD" secondAttribute="bottom" constant="8" id="ihp-AJ-1fa"/>
-                                                <constraint firstAttribute="trailing" secondItem="bOG-VB-Ysy" secondAttribute="trailing" constant="8" id="okc-7x-8iE"/>
-                                                <constraint firstItem="wFo-Bf-cdZ" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="rw2-yI-88k"/>
-                                                <constraint firstAttribute="bottom" secondItem="nsG-b3-cq8" secondAttribute="bottom" constant="11" id="tVJ-pN-qVs"/>
-                                                <constraint firstItem="YPA-SH-92m" firstAttribute="top" secondItem="wFo-Bf-cdZ" secondAttribute="bottom" constant="8" id="vzo-jO-QNn"/>
-                                                <constraint firstItem="nsG-b3-cq8" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="yfd-GW-BmR"/>
+                                                <constraint firstAttribute="trailing" secondItem="YPA-SH-92m" secondAttribute="trailing" constant="8" id="2ZS-mR-ldu"/>
+                                                <constraint firstAttribute="trailing" secondItem="nsG-b3-cq8" secondAttribute="trailing" constant="8" id="8ki-CJ-2mh"/>
+                                                <constraint firstItem="YPA-SH-92m" firstAttribute="top" secondItem="wFo-Bf-cdZ" secondAttribute="bottom" constant="4" id="F3b-fH-NLv"/>
+                                                <constraint firstItem="wFo-Bf-cdZ" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="Fhn-XW-Ajc"/>
+                                                <constraint firstItem="nze-g0-pbD" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="GBi-8E-2FR"/>
+                                                <constraint firstItem="wFo-Bf-cdZ" firstAttribute="top" secondItem="12n-hC-XS3" secondAttribute="top" constant="8" id="Jk0-Ya-iW9"/>
+                                                <constraint firstItem="nsG-b3-cq8" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="ScZ-Jo-NUv"/>
+                                                <constraint firstItem="YPA-SH-92m" firstAttribute="leading" secondItem="12n-hC-XS3" secondAttribute="leading" constant="8" id="bTT-3W-1kL"/>
+                                                <constraint firstItem="nsG-b3-cq8" firstAttribute="top" secondItem="nze-g0-pbD" secondAttribute="bottom" constant="4" id="hzw-78-o8g"/>
+                                                <constraint firstAttribute="trailing" secondItem="wFo-Bf-cdZ" secondAttribute="trailing" constant="8" id="kmy-tK-Jv6"/>
+                                                <constraint firstAttribute="trailing" secondItem="nze-g0-pbD" secondAttribute="trailing" constant="8" id="qFc-HF-3ZQ"/>
+                                                <constraint firstItem="nze-g0-pbD" firstAttribute="top" secondItem="YPA-SH-92m" secondAttribute="bottom" constant="4" id="uId-qK-OkM"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -467,10 +453,14 @@
                         <viewLayoutGuide key="safeArea" id="6bV-4q-qWI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6bV-4q-qWI" firstAttribute="bottom" secondItem="sQC-9f-qfS" secondAttribute="bottom" id="3GQ-Fc-fSa"/>
-                            <constraint firstItem="sQC-9f-qfS" firstAttribute="trailing" secondItem="6bV-4q-qWI" secondAttribute="trailing" id="NTe-oR-tQK"/>
-                            <constraint firstItem="sQC-9f-qfS" firstAttribute="leading" secondItem="6bV-4q-qWI" secondAttribute="leading" id="VyJ-eX-DbB"/>
-                            <constraint firstItem="sQC-9f-qfS" firstAttribute="top" secondItem="6bV-4q-qWI" secondAttribute="top" id="swX-RV-BEs"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="trailing" secondItem="6bV-4q-qWI" secondAttribute="trailing" id="7wa-xK-FRR"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="top" secondItem="6bV-4q-qWI" secondAttribute="top" id="A6F-yO-ram"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="bottom" secondItem="6bV-4q-qWI" secondAttribute="bottom" id="H7Q-1Y-5s6"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="trailing" secondItem="6bV-4q-qWI" secondAttribute="trailing" id="NM6-98-8s4"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="leading" secondItem="6bV-4q-qWI" secondAttribute="leading" id="aWL-BE-9WF"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="top" secondItem="6bV-4q-qWI" secondAttribute="top" id="cYg-DG-9Vd"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="leading" secondItem="6bV-4q-qWI" secondAttribute="leading" id="jA8-y1-XbW"/>
+                            <constraint firstItem="sQC-9f-qfS" firstAttribute="bottom" secondItem="6bV-4q-qWI" secondAttribute="bottom" id="yc2-lv-ODL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dKW-41-bqa"/>
